# PHY607_Project2

./: LICENSE  README.md  main  main.sh  profile.txt  pyproject.toml
Monte_sim/: main
Monte_sim/monte_carlo_sim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
test/: observables.txt  particle_velocities.txt
