[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "monte_carlo_sim"
version = "0.0.1"
dependencies = [
   "numpy",
]
authors = [
  { name="Luis Rufino", email="luisrufino24@gmail.com" },
  { name="Julia Rice", email="jrrice@syr.edu" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE"}

[project.scripts]
run_mc_sim = "src:main"